--- a/colorGenerator/main.html
+++ b/colorGenerator/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  
   <link rel="shortcut icon" type="image/png" href="color.png" />
   <link rel="stylesheet" href="style.css">
-  <title>Colors</title>
+  <title>Color Generator</title>
 </head>
 <body>
 
