Refactored the code

--- a/quoteGenerator/main.html
+++ b/quoteGenerator/main.html
@@ -17,8 +17,8 @@
              
 
             <div class="quotes-content">
-                <p id="quote-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima similique consequatur voluptatum veritatis, excepturi recusandae ipsum architecto rerum! Itaque provident tempora sit molestias atque! Dolorem ratione quae impedit perspiciatis vitae.</p>
-                <h2 id="quote-author">~Ebrahim Touray</h2>
+                <p id="quote-text"></p>
+                <h2 id="quote-author">~</h2>
             </div>
 
             <div class="quote-btn">
