--- a/calculator/main.html
+++ b/calculator/main.html
@@ -13,10 +13,10 @@
 <body>
     
     <div class="container" id="container">
-        <span><i class="fa-solid fa-toggle-off" onclick="changeTheme()"></i></span>
         <div class="calculator" id="calculator">
+            <span><i class="fa-solid fa-toggle-off" onclick="changeTheme()"></i></span>
             <div class="input-result">
-            <input id="expression" type="text" autofocus>
+            <input class="expression" id="expression" type="text" autofocus>
             <h2 class="result" id="result">12,545</h2>
         </div>
         <div class="cal-btns">
