--- a/Groecery-list/main.html
+++ b/Groecery-list/main.html
@@ -12,6 +12,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="msg">
+            <div id="message" class="message">
+                <p>The input field is empty!</p>
+            </div>
+        </div>
+
         <div class="groce-container">
             <h1>Your Grocery List</h1>
             <img src="images/foodpacl-removebg-preview.png" alt="" srcset="">
